syntax = "proto3";

package grpc;

option go_package = "./grpc";

message User {
  int32 id = 1;
  string username = 2;
}

message UserJWTToken {
  string token = 1;
}

message UserQuery {
  int32 user_id = 1;
}

service UserCredentials {
  rpc GetUser(UserJWTToken) returns (User) {}
  rpc GetUserDetails(UserQuery) returns (User) {}
}